--- a/index.htm
+++ b/index.htm
@@ -1,3 +1,29 @@
+
+<!DOCTYPE html>
+<html lang="zh-tw">
+<head>
+<title>NUU CCDM SB </title>
+<meta charset="UTF-8">
+</head>
+<body>
+<center>
+
+<div id="head">
+<table width="1000" border="0" cellpadding="0" cellspacing="0">
+
+<tr>
+<td align="center"><img src="01.jpg" width="640" height="360"></td>
+</tr>
+
+
+<tr>
+<td align="center">你竟然來到The small black's world?!</td>
+</tr>
+
+
+</table>
+</div>
+
 <div id="cont"><br>
 <table width="1000" border="0" cellpadding="0" cellspacing="1"bgcolor="#999999">
 
